# Repositorio_Actividades_Semanas-

./: Actividad3-CC232..md  Actividad4_semana4.md  Actividad5-CC232.md  Actividad6-CC232.md  Actividad7-CC232.md  Actividad8-CC232.md  Evaluacion_Parcial(Solucionario_VersionC).md  actividad1_semana1.md  actividad2_semana2.md
Practica_Calificada3-CC232/: .gitignore  CMakeLists.txt  README.md
Practica_Calificada3-CC232/benchmark/: main_benchmark.cpp
Practica_Calificada3-CC232/demos/: main.cpp
Practica_Calificada3-CC232/docs/: bitacora.md  respuestas_obligatorias.md
Practica_Calificada3-CC232/include/: Solution.h  Treap.h
Practica_Calificada3-CC232/resultados/: casos_borde.txt  ejecucion_pc3.txt  tests_pc3.txt
Practica_Calificada3-CC232/src/: Solution.cpp
Practica_Calificada3-CC232/tests/: test_main.cpp
Practica_Calificada3-CC232/video/: link del video.md
